--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationDelete.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationDelete.json
@@ -1,13 +1,15 @@
 {
   "parameters": {
     "accountName": "sampleacct",
-    "resourceGroupName": "default-azurebatch-japaneast",
     "api-version": "2024-07-01",
-    "subscriptionId": "subid",
-    "applicationName": "app1"
+    "applicationName": "app1",
+    "resourceGroupName": "default-azurebatch-japaneast",
+    "subscriptionId": "subid"
   },
   "responses": {
     "200": {},
     "204": {}
-  }
+  },
+  "operationId": "Application_Delete",
+  "title": "ApplicationDelete"
 }
