--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationList.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationList.json
@@ -1,8 +1,8 @@
 {
   "parameters": {
     "accountName": "sampleacct",
-    "resourceGroupName": "default-azurebatch-japaneast",
     "api-version": "2024-07-01",
+    "resourceGroupName": "default-azurebatch-japaneast",
     "subscriptionId": "subid"
   },
   "responses": {
@@ -10,20 +10,20 @@
       "body": {
         "value": [
           {
-            "type": "Microsoft.Batch/batchAccounts/applications",
-            "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app1",
             "name": "app1",
+            "type": "Microsoft.Batch/batchAccounts/applications",
             "etag": "W/\"0x8D64F91A9089879\"",
+            "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app1",
             "properties": {
               "allowUpdates": false,
               "defaultVersion": "1"
             }
           },
           {
-            "type": "Microsoft.Batch/batchAccounts/applications",
-            "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app2",
             "name": "app1",
+            "type": "Microsoft.Batch/batchAccounts/applications",
             "etag": "W/\"0x8D64F91A9089879\"",
+            "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app2",
             "properties": {
               "allowUpdates": false,
               "defaultVersion": "2.0",
@@ -33,5 +33,7 @@
         ]
       }
     }
-  }
+  },
+  "operationId": "Application_List",
+  "title": "ApplicationList"
 }
