--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationPackageDelete.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationPackageDelete.json
@@ -1,14 +1,16 @@
 {
   "parameters": {
     "accountName": "sampleacct",
-    "resourceGroupName": "default-azurebatch-japaneast",
     "api-version": "2024-07-01",
-    "subscriptionId": "subid",
     "applicationName": "app1",
+    "resourceGroupName": "default-azurebatch-japaneast",
+    "subscriptionId": "subid",
     "versionName": "1"
   },
   "responses": {
     "200": {},
     "204": {}
-  }
+  },
+  "operationId": "ApplicationPackage_Delete",
+  "title": "ApplicationPackageDelete"
 }
