--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationUpdate.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationUpdate.json
@@ -1,34 +1,36 @@
 {
   "parameters": {
     "accountName": "sampleacct",
-    "resourceGroupName": "default-azurebatch-japaneast",
     "api-version": "2024-07-01",
-    "subscriptionId": "subid",
     "applicationName": "app1",
     "parameters": {
       "properties": {
         "allowUpdates": true,
-        "displayName": "myAppName",
-        "defaultVersion": "2"
+        "defaultVersion": "2",
+        "displayName": "myAppName"
       }
-    }
+    },
+    "resourceGroupName": "default-azurebatch-japaneast",
+    "subscriptionId": "subid"
   },
   "responses": {
     "200": {
-      "headers": {
-        "ETag": "W/\"0x8D64F915BDF7F00\""
-      },
       "body": {
-        "type": "Microsoft.Batch/batchAccounts/applications",
-        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app1",
         "name": "app1",
+        "type": "Microsoft.Batch/batchAccounts/applications",
         "etag": "W/\"0x8D64F915BDF7F00\"",
+        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app1",
         "properties": {
           "allowUpdates": true,
-          "displayName": "myAppName",
-          "defaultVersion": "2"
+          "defaultVersion": "2",
+          "displayName": "myAppName"
         }
+      },
+      "headers": {
+        "ETag": "W/\"0x8D64F915BDF7F00\""
       }
     }
-  }
+  },
+  "operationId": "Application_Update",
+  "title": "ApplicationUpdate"
 }
