--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationCreate.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/ApplicationCreate.json
@@ -1,32 +1,34 @@
 {
   "parameters": {
     "accountName": "sampleacct",
-    "resourceGroupName": "default-azurebatch-japaneast",
     "api-version": "2024-07-01",
-    "subscriptionId": "subid",
     "applicationName": "app1",
     "parameters": {
       "properties": {
         "allowUpdates": false,
         "displayName": "myAppName"
       }
-    }
+    },
+    "resourceGroupName": "default-azurebatch-japaneast",
+    "subscriptionId": "subid"
   },
   "responses": {
     "200": {
-      "headers": {
-        "ETag": "W/\"0x8D64F8EBB3DC411\""
-      },
       "body": {
-        "type": "Microsoft.Batch/batchAccounts/applications",
-        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app1",
         "name": "app1",
+        "type": "Microsoft.Batch/batchAccounts/applications",
         "etag": "W/\"0x8D64F8EBB3DC411\"",
+        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/applications/app1",
         "properties": {
           "allowUpdates": false,
           "displayName": "myAppName"
         }
+      },
+      "headers": {
+        "ETag": "W/\"0x8D64F8EBB3DC411\""
       }
     }
-  }
+  },
+  "operationId": "Application_Create",
+  "title": "ApplicationCreate"
 }
