--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/PoolGet_VirtualMachineConfiguration_Extensions.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/PoolGet_VirtualMachineConfiguration_Extensions.json
@@ -1,55 +1,30 @@
 {
   "parameters": {
-    "subscriptionId": "subid",
-    "resourceGroupName": "default-azurebatch-japaneast",
     "accountName": "sampleacct",
+    "api-version": "2024-07-01",
     "poolName": "testpool",
-    "api-version": "2024-07-01"
+    "resourceGroupName": "default-azurebatch-japaneast",
+    "subscriptionId": "subid"
   },
   "responses": {
     "200": {
-      "headers": {
-        "ETag": "W/\"0x8D4EDFEBFADF4AB\""
-      },
       "body": {
-        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/pools/testpool",
         "name": "testpool",
         "type": "Microsoft.Batch/batchAccounts/pools",
         "etag": "W/\"0x8D4EDFEBFADF4AB\"",
+        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/pools/testpool",
         "properties": {
-          "lastModified": "2017-08-28T10:22:55.9407275Z",
-          "creationTime": "2017-08-28T10:22:55.9407275Z",
-          "provisioningState": "Succeeded",
-          "provisioningStateTransitionTime": "2017-08-28T10:22:55.9407275Z",
           "allocationState": "Resizing",
           "allocationStateTransitionTime": "2017-08-28T10:22:55.9407275Z",
-          "vmSize": "STANDARD_D4",
-          "interNodeCommunication": "Enabled",
-          "taskSlotsPerNode": 13,
-          "taskSchedulingPolicy": {
-            "nodeFillType": "Pack"
-          },
-          "scaleSettings": {
-            "fixedScale": {
-              "targetDedicatedNodes": 6,
-              "targetLowPriorityNodes": 28,
-              "resizeTimeout": "PT8M"
-            }
-          },
-          "resizeOperationStatus": {
-            "startTime": "2017-08-28T10:22:55.9407275Z",
-            "targetDedicatedNodes": 6,
-            "targetLowPriorityNodes": 28,
-            "nodeDeallocationOption": "TaskCompletion",
-            "resizeTimeout": "PT8M"
-          },
+          "creationTime": "2017-08-28T10:22:55.9407275Z",
           "currentDedicatedNodes": 0,
           "currentLowPriorityNodes": 0,
+          "currentNodeCommunicationMode": "Classic",
           "deploymentConfiguration": {
             "virtualMachineConfiguration": {
               "imageReference": {
-                "publisher": "Canonical",
                 "offer": "0001-com-ubuntu-server-focal",
+                "publisher": "Canonical",
                 "sku": "20_04-lts"
               },
               "nodeAgentSkuId": "batch.node.ubuntu 20.04",
@@ -57,22 +32,49 @@
                 {
                   "name": "batchextension1",
                   "type": "KeyVaultForLinux",
-                  "publisher": "Microsoft.Azure.KeyVault",
-                  "typeHandlerVersion": "2.0",
                   "autoUpgradeMinorVersion": true,
                   "enableAutomaticUpgrade": true,
+                  "publisher": "Microsoft.Azure.KeyVault",
                   "settings": {
-                    "secretsManagementSettingsKey": "secretsManagementSettingsValue",
-                    "authenticationSettingsKey": "authenticationSettingsValue"
-                  }
+                    "authenticationSettingsKey": "authenticationSettingsValue",
+                    "secretsManagementSettingsKey": "secretsManagementSettingsValue"
+                  },
+                  "typeHandlerVersion": "2.0"
                 }
               ]
             }
           },
+          "interNodeCommunication": "Enabled",
+          "lastModified": "2017-08-28T10:22:55.9407275Z",
+          "provisioningState": "Succeeded",
+          "provisioningStateTransitionTime": "2017-08-28T10:22:55.9407275Z",
+          "resizeOperationStatus": {
+            "nodeDeallocationOption": "TaskCompletion",
+            "resizeTimeout": "PT8M",
+            "startTime": "2017-08-28T10:22:55.9407275Z",
+            "targetDedicatedNodes": 6,
+            "targetLowPriorityNodes": 28
+          },
+          "scaleSettings": {
+            "fixedScale": {
+              "resizeTimeout": "PT8M",
+              "targetDedicatedNodes": 6,
+              "targetLowPriorityNodes": 28
+            }
+          },
           "targetNodeCommunicationMode": "Default",
-          "currentNodeCommunicationMode": "Classic"
+          "taskSchedulingPolicy": {
+            "nodeFillType": "Pack"
+          },
+          "taskSlotsPerNode": 13,
+          "vmSize": "STANDARD_D4"
         }
+      },
+      "headers": {
+        "ETag": "W/\"0x8D4EDFEBFADF4AB\""
       }
     }
-  }
+  },
+  "operationId": "Pool_Get",
+  "title": "GetPool - VirtualMachineConfiguration Extensions"
 }
