--- a/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/PoolGet_VirtualMachineConfiguration_MangedOSDisk.json
+++ b/specification/batch/resource-manager/Microsoft.Batch/stable/2024-07-01/examples/PoolGet_VirtualMachineConfiguration_MangedOSDisk.json
@@ -1,71 +1,73 @@
 {
   "parameters": {
-    "subscriptionId": "subid",
-    "resourceGroupName": "default-azurebatch-japaneast",
     "accountName": "sampleacct",
+    "api-version": "2024-07-01",
     "poolName": "testpool",
-    "api-version": "2024-07-01"
+    "resourceGroupName": "default-azurebatch-japaneast",
+    "subscriptionId": "subid"
   },
   "responses": {
     "200": {
-      "headers": {
-        "ETag": "W/\"0x8DB51E64D3C3B69\""
-      },
       "body": {
-        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/pools/testpool",
         "name": "testpool",
         "type": "Microsoft.Batch/batchAccounts/pools",
         "etag": "W/\"0x8DB51E64D3C3B69\"",
+        "id": "/subscriptions/subid/resourceGroups/default-azurebatch-japaneast/providers/Microsoft.Batch/batchAccounts/sampleacct/pools/testpool",
         "properties": {
-          "lastModified": "2023-08-24T02:12:27.7527697Z",
-          "creationTime": "2023-08-24T02:12:27.7527697Z",
-          "provisioningState": "Succeeded",
-          "provisioningStateTransitionTime": "2023-08-24T02:12:27.7527697Z",
           "allocationState": "Steady",
           "allocationStateTransitionTime": "2023-08-24T02:13:22.4881351Z",
-          "vmSize": "STANDARD_D2_V3",
-          "interNodeCommunication": "Disabled",
-          "taskSlotsPerNode": 1,
-          "taskSchedulingPolicy": {
-            "nodeFillType": "Spread"
-          },
+          "creationTime": "2023-08-24T02:12:27.7527697Z",
+          "currentDedicatedNodes": 1,
+          "currentLowPriorityNodes": 0,
+          "currentNodeCommunicationMode": "Classic",
           "deploymentConfiguration": {
             "virtualMachineConfiguration": {
               "imageReference": {
-                "publisher": "microsoftwindowsserver",
                 "offer": "windowsserver",
+                "publisher": "microsoftwindowsserver",
                 "sku": "2022-datacenter-smalldisk",
                 "version": "latest"
               },
               "nodeAgentSkuId": "batch.node.windows amd64",
               "osDisk": {
                 "caching": "ReadWrite",
+                "diskSizeGB": 100,
                 "managedDisk": {
                   "storageAccountType": "StandardSSD_LRS"
                 },
-                "diskSizeGB": 100,
                 "writeAcceleratorEnabled": false
               }
             }
           },
-          "scaleSettings": {
-            "fixedScale": {
-              "targetDedicatedNodes": 1,
-              "targetLowPriorityNodes": 0,
-              "resizeTimeout": "PT15M"
-            }
-          },
+          "interNodeCommunication": "Disabled",
+          "lastModified": "2023-08-24T02:12:27.7527697Z",
+          "provisioningState": "Succeeded",
+          "provisioningStateTransitionTime": "2023-08-24T02:12:27.7527697Z",
           "resizeOperationStatus": {
-            "targetDedicatedNodes": 1,
             "nodeDeallocationOption": "Requeue",
             "resizeTimeout": "PT15M",
-            "startTime": "2023-08-24T02:12:27.7527697Z"
+            "startTime": "2023-08-24T02:12:27.7527697Z",
+            "targetDedicatedNodes": 1
           },
-          "currentDedicatedNodes": 1,
-          "currentLowPriorityNodes": 0,
-          "currentNodeCommunicationMode": "Classic"
+          "scaleSettings": {
+            "fixedScale": {
+              "resizeTimeout": "PT15M",
+              "targetDedicatedNodes": 1,
+              "targetLowPriorityNodes": 0
+            }
+          },
+          "taskSchedulingPolicy": {
+            "nodeFillType": "Spread"
+          },
+          "taskSlotsPerNode": 1,
+          "vmSize": "STANDARD_D2_V3"
         }
+      },
+      "headers": {
+        "ETag": "W/\"0x8DB51E64D3C3B69\""
       }
     }
-  }
+  },
+  "operationId": "Pool_Get",
+  "title": "GetPool - VirtualMachineConfiguration OSDisk"
 }
